# Colloquip

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  SYSTEM_DESIGN.md  alembic.ini  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  phase6_test_report.txt  pyproject.toml
.claude/: settings.json
alembic/: env.py
config/: agents.yaml  engine.yaml  nf_processes.yaml  production.yaml  prometheus.yml  staging.yaml
demo/: README.md  VOICEOVER_SCRIPT.md  demo-competition.spec.ts  demo-v2.spec.ts  demo.spec.ts  package.json  playwright.config.ts  screenshots.spec.ts
docs/: AGENT_PROMPTS.md  ENERGY_MODEL.md  IMPLEMENTATION_PROMPT_PHASE_1_2.md  IMPLEMENTATION_PROMPT_PHASE_3_5.md  OBSERVER_SPEC.md  README.md  SYSTEM_DESIGN.md  TRIGGER_RULES.md
issues/: 01.md  02.md
plan/: EVOLUTION_PLAN.md  FRONTEND_REBUILD_PLAN.md  IMPLEMENTATION_PLAN.md  PHASE_3_5_PLAN.md  PLAN.md  SOCIAL_PLATFORM_PLAN.md
scripts/: healthcheck.py  install-hooks.sh  playwright_test_frontend.py  playwright_test_phase6.py  pre-commit  reset-demo.sh  seed_demo.py
tests/: TEST_STRATEGY.md  conftest.py  test_agents.py  test_anthropic.py  test_api.py  test_api_routes.py  test_auto_deliberation.py  test_bayesian_confidence.py  test_behavioral.py  test_config.py  test_cross_references.py  test_database_query_tool.py  test_db.py  test_deployment.py  test_differ.py  test_display.py  test_domain_databases.py  test_embeddings.py  test_energy.py  test_engine.py  test_feedback.py  test_infrastructure.py  test_integration_e2e.py  test_memory.py  (+23 more)
(+242 files in other folders)
